--- a/Lab5/style.css
+++ b/Lab5/style.css
@@ -72,3 +72,13 @@ img {
   position: fixed;
   bottom: 0px;
 }
+
+.zone{
+display: flex;
+    justify-content: space-around;
+  align-items: center;
+  margin-top: 10px;
+  border: 1px solid black;
+  height: 70px;
+  border-radius: 10px;
+}
