--- a/Lab5/style.css
+++ b/Lab5/style.css
@@ -1,8 +1,16 @@
-.game{
-  margin: 100px auto;
-  max-width: 600px;
+.wrapper{
+  display: flex;
+  margin: 100px;
+  flex-direction: column;
+  justify-content: center;
 }
-
+.gameZone{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+}
+.res
 .rotate360 {
   transition: transform 1s;
   transform: rotate(360deg);
@@ -14,6 +22,7 @@ img {
 
 .cubes{
   display: flex;
+
   flex-direction: column;
   align-items: center;
 }
@@ -29,6 +38,7 @@ img {
 }
 
 .roll{
+  margin-top: 10px;
   box-sizing: border-box;
   width: 50px;
   height: 50px;
@@ -46,11 +56,11 @@ img {
 }
 
 .game-section{
-  display: grid;
-  grid-template-columns: auto auto;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  margin: 30px auto;
-  grid-gap: 30px;
+  align-items: stretch;
+  margin: 30px;
 }
 
 .green{
